# AexolGL

./: .gitignore  CMakeLists.txt  README.md
examples/gui/fonts/bitmap_fonts/: CMakeLists.txt  bitmap_font6.cpp
examples/gui/fonts/bitmap_fonts/assets/: bitmap_font.txt
examples/gui/fonts/bitmap_fonts/scripts/: make_projects.conf  make_projects.sh
libraries/: CMakeLists.txt
libraries/AdsModule/: CMakeLists.txt
libraries/AdsModule/include/aex/ads/: AdInterface.hpp  AdMob.hpp  AdsModule.hpp  ads-config.hpp  iAds.hpp
libraries/AdsModule/java_android/: AndroidManifest.xml.in  proguard-aex.pro
libraries/AdsModule/src/: AdInterface.cpp  AdMob.cpp  AdModule.cpp
libraries/AdsModule/src/android/: AdMobAndroid.cpp
libraries/AdsModule/src/dummy/: AdMobDummy.cpp  IAdsDummy.cpp
libraries/AdsModule/src/ios/: AdMobIos.cpp  OverlayViewIOS.hh  OverlayViewIOS.mm  iAdsIos.hh  iAdsIos.mm
libraries/AdsModule/src/ios/iAdsImplementation/: BannerViewController.h  BannerViewController.m  InterstitialViewController.hh  InterstitialViewController.mm
libraries/BaseLib/: CMakeLists.txt
libraries/BaseLib/include/aex/: AABB.hpp  ALoop.hpp  ALoopNode.hpp  ASceneNode.hpp  AWindow.hpp  AbstractFactory.hpp  AccelEvent.hpp  Accelerometer.hpp  Aex.hpp  AexDrawable.hpp  AexInstances.hpp  AexMeshPart.hpp  AexOverlaySubView.hpp  AexOverlayView.hpp  AexOverlayViewIMPL.hpp  AexRenderTree.hpp  AexRenderer.hpp  AexTypes.hpp  AexolGL.hpp  Alloc.hpp  AndroidAPI.hpp  AndroidIODevice.hpp  Animation.hpp  AnimationDrw.hpp  AnimationFactory.hpp  AnimationMgr.hpp  AnimationPlayers.hpp  Area.hpp  BBox2d.hpp  BasicAnimation.hpp  BasicEvents.hpp  BoundingSphere.hpp  BoundingSphereObject.hpp  Box.hpp  BuildInEvents.hpp  Camera.hpp  CameraRenderBlock.hpp  CelluralAutomata.hpp  ChronoClock.hpp  Clock.hpp  (+171 more)
libraries/BaseLib/include/aex/algorithms/: PoissonDiscSampling.hpp
libraries/BaseLib/include/aex/audio/: AudioPlayer.hpp  SoundSource.hpp  SoundSourceHandler.hpp
libraries/BaseLib/include/aex/details/: AnimationPlayers.ipp  BasicAnimation.ipp  DrawableMediator.ipp  ISimulation.ipp  Proxy.ipp  Simulation.ipp  SubsystemGuard.ipp  TAex.ipp  aex_file_details.hpp  cds_helpers.hpp  listener_begin.hpp  listener_end.hpp
libraries/BaseLib/include/aex/glLoadGen/: gl_core_3_0.hpp
libraries/BaseLib/include/aex/gui/: BitmapFont.hpp  BitmapFontSet.hpp  BitmapFontSetManager.hpp  BoundingRect.hpp  CameraPixelBuffer.hpp  CameraView.hpp  CardsPanel.hpp  CircleBar.hpp  CircleBarMesh.hpp  Color.hpp  ColorMesh.hpp  ColorRectComponent.hpp  Component.hpp  DebugRect.hpp  FixedLabel.hpp  FixedPanel.hpp  Flags.hpp  FontEffect.hpp  FontEffectBitmap.hpp  FontEffectColor.hpp  FontEffectMovingBackground.hpp  FontGlyphSet.hpp  FontRenderer.hpp  FontSource.hpp  FontSourceBitmap.hpp  FontSourceTTF.hpp  Frame.hpp  GUI.hpp  GUIAccessors.hpp  GUIDeftypes.hpp  GUIMath.hpp  GraphView.hpp  HudComponent.hpp  HudUtils.hpp  Input.hpp  LabeledComponent.hpp  Mesh.hpp  MobApp.hpp  Panel.hpp  (+25 more)
libraries/BaseLib/java_android/: proguard-aex.pro
libraries/BaseLib/src/: ALoop.cpp  CMakeLists.txt  Icosahedron.cpp  MeshExporter.cpp  MeshImporter.cpp  QuaternionCamera.cpp  ReadFromAexFile.cpp  SaveToAexFile.cpp  ThreadedLoop.cpp  TransformationImporter.cpp  VRCamera.cpp  ax_Macros.cpp
libraries/BaseLib/src/algorithms/: CMakeLists.txt
libraries/BaseLib/src/containers/: CMakeLists.txt
libraries/BaseLib/src/framework/: CMakeLists.txt
libraries/BaseLib/src/geometry/: CMakeLists.txt
libraries/BaseLib/src/math/: CMakeLists.txt
libraries/FBModule/: CMakeLists.txt  README.txt
libraries/FBModule/examples/: AppActivateExample.cpp  GraphRequestDELETE.cpp  GraphRequestGET.cpp  LoginRequest.cpp
libraries/FBModule/java_android/: AndroidManifest.xml.in  proguard-aex.pro
libraries/FBModule/src/: FBAppEventsLogger.cpp  FBGraphRequest.cpp  FBLoginManager.cpp  FBPermissions.cpp  FBResults.cpp
libraries/FBModule/src/android/: FBAppEventsLoggerAndroid.cpp  FBBridge.hpp  FBGraphRequestAndroid.cpp  FBLoginManagerAndroid.cpp  JNIUtils.cpp  JNIUtils.hpp
libraries/FBModule/src/dummy/: FBAppEventsLoggerDummy.cpp  FBGraphRequestDummy.cpp  FBLoginManagerDummy.cpp
libraries/FBModule/src/ios/: FBAppEventsLoggerIOS.mm  FBGraphRequestIOS.mm  FBLoginManagerIOS.mm  SDL_uikitappdelegate_swizzling.h  SDL_uikitappdelegate_swizzling.m
libraries/HDWModule/: CMakeLists.txt  README.txt
libraries/HDWModule/examples/: accelerometer.cpp  allSensors.cpp
libraries/HDWModule/java_android/: AndroidManifest.xml.in  proguard-aex.pro
libraries/HDWModule/src/: HDW.cpp  Sensor.cpp  SensorManager.cpp
libraries/HDWModule/src/android/: JNIUtils.cpp  JNIUtils.hpp  SensorAndroid.cpp  SensorManagerAndroid.cpp  com_aexolgl_android_hdw_HDWBridge.h
libraries/HDWModule/src/dummy/: SensorDummy.cpp  SensorManagerDummy.cpp
libraries/HDWModule/src/ios/: MotionManager.hh  SensorIOS.mm  SensorManagerIOS.mm
libraries/InAppModule/: CMakeLists.txt
libraries/InAppModule/include/aex/: AndroidShop.hpp  IAPCallback.hpp  IShop.hpp  ShopHelper.hpp  ShopInterface.hpp  inapps-config.hpp
libraries/InAppModule/java_android/: AndroidManifest.xml.in  proguard-aex.pro
libraries/InAppModule/src/: IAPCallback.cpp  ShopHelper.cpp
libraries/InAppModule/src/android/: AndroidBridge.hpp  AndroidShop.cpp
libraries/InAppModule/src/dummy/: AndroidShopDummy.cpp  IShopDummy.cpp
libraries/InAppModule/src/ios/: IAPHelper_objc.hh  IAPHelper_objc.mm  IAPWrapper.hh  IAPWrapper.mm  IShop.cpp  IosCallback.hpp
tests/g_tests/: CMakeLists.txt
tests/g_tests/test_src/: Animation.cpp  AnimationPlayers.cpp  BasicAnimation.cpp  FrameData.cpp  KeyFrameData.cpp  MockObjectGuard.hpp  MockSimulationDataTraits.cpp  MockSimulationDataTraits.hpp  MockWindow.cpp  MockWindow.hpp  Proxy.cpp  ReadSimpleKeyFrame.cpp  SaveSimpleKeyFrame.cpp  SimpleKeyFrameAnimation.cpp  SimpleKeyFrameSample.cpp  SimpleKeyFrameSample.hpp  Simulation.cpp  Subsystem.cpp  Traits.cpp  UserMockAnimationType.hpp  UserMockType.hpp  assimp.cpp  boost_path.cpp  endian.cpp  latawiec.mb  main.cpp  main_android.cc  positionnormaluv.cpp  sdl_main_android.cc
(+517 files in other folders)
